--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <path fill-rule=evenodd clip-rule=evenodd
                                     d="M7.03198 3.80281V7.07652L3.86083 9.75137L0.689673 12.4263L0.667474 6.56503C0.655304 3.34138 0.663875 0.654206 0.686587 0.593579C0.71907 0.506918 1.4043 0.488223 3.87994 0.506219L7.03198 0.529106V3.80281ZM21.645 4.36419V5.88433L17.0383 9.76316C14.5046 11.8966 11.2263 14.6552 9.75318 15.8934L7.07484 18.145V20.3225V22.5H3.85988H0.64502L0.667303 18.768L0.689673 15.036L2.56785 13.4609C3.60088 12.5946 6.85989 9.85244 9.81009 7.36726L15.1741 2.84867L18.4096 2.8464L21.645 2.84413V4.36419ZM21.645 15.5549V22.5H18.431H15.217V18.2638V14.0274L15.4805 13.7882C15.8061 13.4924 21.5939 8.61606 21.6236 8.61248C21.6353 8.61099 21.645 11.7351 21.645 15.5549Z"
                                     fill=currentColor />
-                            </svg> </span><span class=brand_name>Hosteller</span> </a><button class=close type=button
+                            </svg> </span><span class=brand_name>Hostel</span> </a><button class=close type=button
                         data-bs-dismiss=offcanvas><i class=icon-close--entypo></i></button></div>
                 <nav class=header_nav>
                     <ul class=header_nav-list>
@@ -119,7 +119,7 @@
         <div class="container container--hero d-lg-flex align-items-center justify-content-between">
             <div class="hero_main">
                 <h1 class="hero_main-title" data-aos="fade-up">
-                    Hosteller — amazing hostel for the free spirited traveler
+                    Hostel — amazing hostel for the free spirited traveler
                 </h1>
                 <div class="hero_main-content d-flex">
                     <span class="line" data-aos="fade-up" data-aos-delay="50"></span>
@@ -419,7 +419,7 @@
                                     <i class="icon-star icon"></i>
                                 </div>
                                 <span class="reviews_slider-slide_date"><span class="h4">Date of stay:</span> October
-                                    2021</span>
+                                    2025</span>
                                 <div class="reviews_slider-slide_main">
                                     <h4 class="title">Consequat interdum varius sit varius</h4>
                                     <p class="text">Consequat interdum varius sit amet mattis vulputate enim nulla. Posuere
@@ -462,7 +462,7 @@
                                     <i class="icon-star icon"></i> <i class="icon-star icon"></i>
                                     <i class="icon-star icon"></i>
                                 </div>
-                                <span class="reviews_slider-slide_date"><span class="h4">Date of stay:</span> April 2021</span>
+                                <span class="reviews_slider-slide_date"><span class="h4">Date of stay:</span> April 2025</span>
                                 <div class="reviews_slider-slide_main">
                                     <h4 class="title">Elementum eu facilisis at elementum</h4>
                                     <p class="text">Consequat interdum varius sit amet mattis vulputate enim nulla. Posuere
@@ -483,7 +483,7 @@
                                     <i class="icon-star icon"></i> <i class="icon-star icon"></i>
                                     <i class="icon-star icon"></i>
                                 </div>
-                                <span class="reviews_slider-slide_date"><span class="h4">Date of stay:</span> May 2021</span>
+                                <span class="reviews_slider-slide_date"><span class="h4">Date of stay:</span> May 2025</span>
                                 <div class="reviews_slider-slide_main">
                                     <h4 class="title">Ultricies eu ultricies tristique facilisis</h4>
                                     <p class="text">Consequat interdum varius sit amet mattis vulputate enim nulla. Posuere
